--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express-ws": "^5.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "engines": {
     "node": ">=12.0.0"
